--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,48 +1,53 @@
 <footer class="container-fluid px-md-5 px-3 footer">
-    <div class="row" >
-        <div class="col-lg-3 col-md-12 px-3 px-md-4 py-3 py-lg-0">
-            <h5 class="footer-title">khoảng trời của bé</h5>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos qui autem. Earum, beatae laborum
-                iusto esse commodi magni</span>
-            <hr>
-            <div class="d-flex justify-content-start align-items-center gap-3 mb-3">
-                <i class="fa-solid fa-phone"></i>:
-                <p class="mb-0 fw-bold"><em>0705081088</em></p>
-            </div>
-            <div class="d-flex justify-content-start align-items-center gap-3">
-                <i class="fa-solid fa-house-chimney"></i>:
-                <p class="mb-0 fw-bold"><em>Vietnam, Hanoi</em></p>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-6 px-3 px-md-4 py-3 py-lg-0">
-            <h5 class="footer-title">thông tin</h5>
-            <ul>
-                <li><a href="#">Giới thiệu chung</a></li>
-                <li><a href="#">Sứ mệnh</a></li>
-                <li><a href="#">Nhân sự</a></li>
-                <li><a href="#">Thông tin liên hệ</a></li>
-            </ul>
-        </div>
-        <div class="col-lg-3 col-md-6 col-6 px-3 px-md-4 py-3 py-lg-0"
-            data-aos-delay="400">
-            <h5 class="footer-title">hoạt động</h5>
-            <ul>
-                <li><a href="#">Giới thiệu chung</a></li>
-                <li><a href="#">Sứ mệnh</a></li>
-                <li><a href="#">Nhân sự</a></li>
-                <li><a href="#">Thông tin liên hệ</a></li>
-                <li><a href="#">Thông tin liên hệ</a></li>
-            </ul>
-        </div>
-        <div class="col-lg-3 col-md-12 px-3 px-md-4 py-3 py-lg-0"
-            data-aos-delay="400">
-            <h5 class="footer-title">kết nối với ktcb</h5>
-            <div class="footer-socials">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            </div>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-lg-5 col-md-12 px-3 px-md-4 py-3 py-lg-0">
+      <h5 class="footer-title">khoảng trời của bé</h5>
+      <!-- <hr> -->
+      <div class="d-flex justify-content-start align-items-center gap-3 mb-3">
+        <i class="fa-solid fa-phone"></i>:
+        <p class="mb-0 fw-bold"><em>+84 346535857</em></p>
+      </div>
+      <div class="d-flex justify-content-start align-items-center gap-3">
+        <i class="fa-solid fa-envelope"></i>:
+        <p class="mb-0 fw-bold"><em>khoangtroicuabe.kby@gmail.com</em></p>
+      </div>
     </div>
+    <!-- <div class="col-lg-3 col-md-6 col-6 px-3 px-md-4 py-3 py-lg-0">
+      <h5 class="footer-title">thông tin</h5>
+      <ul>
+        <li><a href="#">Giới thiệu chung</a></li>
+        <li><a href="#">Sứ mệnh</a></li>
+        <li><a href="#">Nhân sự</a></li>
+        <li><a href="#">Thông tin liên hệ</a></li>
+      </ul>
+    </div>
+    <div class="col-lg-3 col-md-6 col-6 px-3 px-md-4 py-3 py-lg-0">
+      <h5 class="footer-title">hoạt động</h5>
+      <ul>
+        <li><a href="#">Giới thiệu chung</a></li>
+        <li><a href="#">Sứ mệnh</a></li>
+        <li><a href="#">Nhân sự</a></li>
+        <li><a href="#">Thông tin liên hệ</a></li>
+        <li><a href="#">Thông tin liên hệ</a></li>
+      </ul>
+    </div> -->
+    <div class="col-lg-5 col-md-12 px-3 px-md-4 py-3 py-lg-0">
+      <!-- <h5 class="footer-title">kết nối với ktcb</h5> -->
+      <div class="footer-logo">
+        <img src="../assets/img/ktcb-logo-512.png" alt="">
+      </div>
+      <div class="d-flex justify-content-start align-items-center gap-3">
+        <i class="fa-brands fa-facebook"></i>:
+        <a class="mb-0 fw-bold" target="_blank" href="https://www.facebook.com/khoangtroicuabektcb">
+          <em>facebook.com/khoangtroicuabektcb</em>
+        </a>
+      </div>
+      <!-- <div class="footer-socials">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+      </div> -->
+    </div>
+  </div>
 </footer>
