--- a/includes/header.html
+++ b/includes/header.html
@@ -1,169 +1,114 @@
 <div id="main-navbar" class="container-fluid d-flex px-md-5 px-3">
-    <a class="nav-logo" href="/">
-        <img src='/assets/img/logo-50x50.png' alt="Logo">
-    </a>
-    <div class="d-flex align-items-center justify-content-center">
-        <div class="d-none d-md-block nav-item position-relative">
-            <ul class="nav-item-dr-list position-absolute">
-                <a class="nav-dropdown-items" href="/pages/introduction.html">
-                    Giới thiệu chung về KTCB
-                </a>
-                <a class="nav-dropdown-items" href="/pages/introduction-team.html">
-                    Giới thiệu về nhân sự KTCB
-                </a>
-            </ul>
-            Về KTCB
-        </div>
-        <div class="d-none d-md-block nav-item position-relative">
-            <ul class="nav-item-dr-list position-absolute">
-                <a class="nav-dropdown-items">
-                    Dành cho đối tượng muốn trở thành TNV
-                </a>
-                <a class="nav-dropdown-items">
-                    Dành cho Nhà tài trợ
-                </a>
-            </ul>
-            Tham Gia
-        </div>
-        <div class="d-none d-md-block nav-item position-relative">
-            <ul class="nav-item-dr-list position-absolute">
-                <a class="nav-dropdown-items">
-                    Tài liệu training
-                </a>
-                <a class="nav-dropdown-items">
-                    Nội dung training
-                </a>
-                <a class="nav-dropdown-items">
-                    Các hoạt động team building
-                </a>
-            </ul>
-            TNV
-        </div>
-        <div class="d-none d-md-block nav-item position-relative">
-            <a href="/pages/activity.html">Hoạt Động - Dự Án</a>
-        </div>
-        <button class="d-none d-md-block btn-filled-pink ms-lg-5" onclick="location.href='/pages/contact.html'">
-            Liên hệ ngay
-        </button>
+  <a class="nav-logo" href="/">
+    <img src='/assets/img/logo-50x50.png' alt="Logo">
+  </a>
+  <div class="d-flex align-items-center justify-content-center">
+    <div class="d-none d-md-block nav-item position-relative">
+      <ul class="nav-item-dr-list position-absolute">
+        <a class="nav-dropdown-items" href="/pages/introduction.html">
+          Giới thiệu chung về KTCB
+        </a>
+        <a class="nav-dropdown-items" href="/pages/introduction-team.html">
+          Giới thiệu về nhân sự KTCB
+        </a>
+      </ul>
+      Về KTCB
     </div>
-    <div class="d-block d-md-none">
-        <label for="mobile__header-nav">
-            <i class="fa-solid fa-bars text-light nav-menu-icon"></i>
-        </label>
+    <div class="d-none d-md-block nav-item position-relative">
+      <ul class="nav-item-dr-list position-absolute">
+        <a class="nav-dropdown-items">
+          Tài liệu training
+        </a>
+        <a class="nav-dropdown-items">
+          Nội dung training
+        </a>
+        <a class="nav-dropdown-items">
+          Các hoạt động team building
+        </a>
+      </ul>
+      TNV
     </div>
-</div>
-<div class="container-fluid header-intro px-md-5 d-none d-lg-flex" style="margin-top: 80px;">
-    <div class="header-intro-content">
-        <i class="fa-solid fa-users"></i>
-        <span>23.000+ tình nguyện viên từ 2013</span>
+    <div class="d-none d-md-block nav-item position-relative">
+      <a href="/pages/activity.html">Hoạt Động - Dự Án</a>
     </div>
-    <div class="header-intro-content">
-        <i class="fa-solid fa-location-dot"></i>
-        <span>15+ điểm dự án triển khai</span>
-    </div>
-    <div class="header-intro-content">
-        <i class="fa-solid fa-shield-heart"></i>
-        <span>An toàn tuyệt đối</span>
-    </div>
-    <div class="header-intro-content">
-        <i class="fa-solid fa-medal"></i>
-        <span>5+ giải thưởng tình nguyện</span>
-    </div>
+    <button class="d-none d-md-block btn-filled-pink ms-lg-5" onclick="location.href='/pages/contact.html'">
+      Tham gia cùng chúng tôi
+    </button>
+  </div>
+  <div class="d-block d-md-none">
+    <label for="mobile__header-nav">
+      <i class="fa-solid fa-bars text-light nav-menu-icon"></i>
+    </label>
+  </div>
 </div>
 <input type="checkbox" id="mobile__header-nav" class="d-none">
 <label for="mobile__header-nav" class="modal__overlay">
 </label>
 <div class="mobile__header-nav">
-    <div class="mobile__header-nav-wrapper">
-        <ul class="mobile__category-list">
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Về KTCB
-                        </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <a href="/pages/introduction.html">
-                                <p>Giới thiệu chung về KTCB</p>
-                            </a>
-                            <a href="/pages/introduction-team.html">
-                                <p>Giới thiệu về nhân sự KTCB</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Hoạt Động - Dự Án
-                        </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <a href="/pages/activity.html">
-                                <p>Hoạt động - dự án đã thực hiện</p>
-                            </a>
-                            <a href="/pages/activity.html">
-                                <p class="mb-0">Hoạt động - dự án đã triển khai</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            TNV
-                        </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <a href="#">
-                                <p>Tài liệu training</p>
-                            </a>
-                            <a href="#">
-                                <p>Nội dung training</p>
-                            </a>
-                            <a href="#">
-                                <p class="mb-0">Các hoạt động Team-Building</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            Tham Gia
-                        </button>
-                    </h2>
-                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <a href="#">
-                                <p>Dành cho đối tượng muốn trở thành TNV</p>
-                            </a>
-                            <a href="#">
-                                <p class="mb-0">Dành cho Nhà tài trợ</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+  <div class="mobile__header-nav-wrapper">
+    <ul class="mobile__category-list">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              Về KTCB
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <a href="/pages/introduction.html">
+                <p>Giới thiệu chung về KTCB</p>
+              </a>
+              <a href="/pages/introduction-team.html">
+                <p>Giới thiệu về nhân sự KTCB</p>
+              </a>
             </div>
-            <div class="d-flex justify-content-start align-items-center px-3 mt-4">
-                <button class="btn-empty-blue d-flex justify-content-center align-items-center gap-2"
-                    onclick="location.href='/pages/contact.html'">
-                    Liên hệ ngay
-                    <i class="fa-solid fa-location-arrow"></i>
-                </button>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              TNV
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <a href="#">
+                <p>Tài liệu training</p>
+              </a>
+              <a href="#">
+                <p>Nội dung training</p>
+              </a>
+              <a href="#">
+                <p class="mb-0">Các hoạt động Team-Building</p>
+              </a>
             </div>
-        </ul>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
+              onclick='location.href="/pages/activity.html"'>
+              Hoạt Động - Dự Án
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+            </div>
+          </div>
+    </ul>
+    <div class="d-flex justify-content-start align-items-center px-3 mt-4">
+      <button class="btn-filled-pink d-flex justify-content-center align-items-center gap-2 fz-small"
+        onclick="location.href='/pages/contact.html'">
+        Tham gia
+        <i class="fa-solid fa-location-arrow"></i>
+      </button>
     </div>
+  </div>
 </div>
