--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,308 +1,352 @@
 #main-navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    transition: top 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    z-index: 1000;
-    height: 80px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  transition: top 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  z-index: 1000;
+  height: 80px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 #main-navbar .nav-item {
-    display: block;
-    color: #000;
-    text-align: center;
-    padding: 5px;
-    text-decoration: none;
-    transition: all 0.3s linear;
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
+  transition: all 0.3s linear;
 }
 
 #main-navbar .nav-item {
-    padding: 20px;
+  padding: 20px;
 }
 
 #main-navbar .nav-item:hover {
-    color: #fa4996;
+  color: #fa4996;
 }
 
 #main-navbar .nav-logo img {
-    width: 55px;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: rgba(240, 46, 170, 0.4) 2px 2px, rgba(240, 46, 170, 0.3) 4px 4px, rgba(240, 46, 170, 0.2) 6px 6px;
+  width: 55px;
+  height: auto;
+  border-radius: 50%;
+  box-shadow: rgba(240, 46, 170, 0.4) 2px 2px, rgba(240, 46, 170, 0.3) 4px 4px, rgba(240, 46, 170, 0.2) 6px 6px;
 }
 
 .nav-item-dr-list {
-    display: none;
-    top: calc(100% + 3px);
-    left: 0;
-    background-color: #fff;
-    width: max-content;
-    padding: 6px 15px;
-    border-radius: 0 0 6px 6px;
-    transition: all 0.3s linear;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  display: none;
+  top: calc(100% + 3px);
+  left: 0;
+  background-color: #fff;
+  width: max-content;
+  padding: 6px 15px;
+  border-radius: 0 0 6px 6px;
+  transition: all 0.3s linear;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
 .nav-item:hover .nav-item-dr-list {
-    display: block;
-    transition: all 0.3s ease-out;
+  display: block;
+  transition: all 0.3s ease-out;
 }
 
 .nav-item:hover .nav-item-dr-list::after {
-    content: '';
-    background-color: transparent;
-    height: 5px;
-    width: 100%;
-    position: absolute;
-    top: -5px;
-    left: 0;
+  content: '';
+  background-color: transparent;
+  height: 5px;
+  width: 100%;
+  position: absolute;
+  top: -5px;
+  left: 0;
 }
 
 .nav-item-dr-list a.nav-dropdown-items {
-    text-decoration: none;
-    display: block;
-    color: #000;
-    text-align: start;
-    padding: 10px 5px;
-    cursor: pointer;
-    transition: all 0.3s linear;
+  text-decoration: none;
+  display: block;
+  color: #000;
+  text-align: start;
+  padding: 10px 5px;
+  cursor: pointer;
+  transition: all 0.3s linear;
 }
 
 .nav-item-dr-list a.nav-dropdown-items:hover {
-    /* background-color: #fff; */
-    color: #fa4996;
-    transform: translate(5px, -5px);
+  /* background-color: #fff; */
+  color: #fa4996;
+  transform: translate(5px, -5px);
 }
 
 .nav-menu-icon {
-    font-size: 20px;
-    width: 45px;
-    height: 40px;
-    border-radius: 6px;
-    background-image: linear-gradient(to right, #ff91c0, #fa4996);
-    /* color: # !important; */
+  font-size: 20px;
+  width: 45px;
+  height: 40px;
+  border-radius: 6px;
+  background-image: linear-gradient(to right, #ff91c0, #fa4996);
+  /* color: # !important; */
 }
 
 .nav-menu-icon::before {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
 #mobile__header-nav:checked+.modal__overlay {
-    display: block;
-    animation: fadeIn 0.3s linear;
+  display: block;
+  animation: fadeIn 0.3s linear;
 }
 
 #mobile__header-nav:checked~.mobile__header-nav-wrap {
-    display: block;
+  display: block;
 
 }
 
 #mobile__header-nav:checked~.mobile__header-nav {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 #mobile__header-nav:checked+.modal__overlay {
-    display: block;
-    animation: fadeIn 0.3s linear;
+  display: block;
+  animation: fadeIn 0.3s linear;
 }
 
 .mobile__header-nav {
-    position: fixed;
-    top: calc(0% + 80px);
-    transform: translateX(-100%);
-    width: 66.7%;
-    background-color: white;
-    height: calc(100% - 73px);
-    z-index: 4;
-    left: 0;
-    transition: transform 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: auto;
+  position: fixed;
+  top: calc(0% + 80px);
+  transform: translateX(-100%);
+  width: 66.7%;
+  background-color: white;
+  height: calc(100% - 73px);
+  z-index: 4;
+  left: 0;
+  transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .mobile__category-item-link {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 15px;
-    text-decoration: none;
-    color: var(--text-color);
-    font-size: 1.2rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.09);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 15px;
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 1.2rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.09);
 }
 
 .mobile__category-item-icon--down {
-    display: none;
+  display: none;
 }
 
 .mobile__header-nav {
-    display: block;
+  display: block;
 }
 
 .mobile__category-item-icon {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .mobile__category-item-child-item {
-    background-color: #f9f9f9;
-    width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.09);
+  background-color: #f9f9f9;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.09);
 }
 
 .mobile__category-child-item-link {
-    text-decoration: none;
-    font-size: 1.2rem;
-    width: 100%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    color: var(--text-color);
-    padding: 12px 28px;
-    display: block;
-    margin-right: 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color: var(--text-color);
+  padding: 12px 28px;
+  display: block;
+  margin-right: 0;
 
+}
+
+.hero-banner-wrapper {
+  padding-top: 80px;
 }
 
 .hero-background {
-    height: 70vh;
-    background-image: url('https://images.unsplash.com/photo-1542810634-71277d95dcbb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+  height: 75vh !important;
+  /* background-image: url('https://images.unsplash.com/photo-1542810634-71277d95dcbb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80'); */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow: hidden;
+  position: relative;
+}
+
+.hero-background img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 576px) {
-    .hero-background {
-        background-attachment: local;
-    }
+  .hero-background {
+    background-attachment: local;
+  }
 }
 
 .hero-background::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-image: linear-gradient(to bottom, rgba(255, 65, 242, 0.1), rgba(255, 65, 242, 0.2));
-    /* background-color: rgba(0, 0, 0, 0.2); */
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(to bottom, rgba(255, 65, 242, 0.1), rgba(255, 65, 242, 0.2));
+  /* background-color: rgba(0, 0, 0, 0.3); */
 }
 
 .hero-banner-img {
-    position: relative;
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .hero-banner-img::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
 }
 
 .hero-banner-mission-wrapper {
-    height: 100%;
-    z-index: 1;
-    left: 0;
-    top: 0;
+  height: 100%;
+  z-index: 1;
+  left: 0;
+  top: 0;
 }
 
 .hero-banner-mission-text {
-    border-radius: 5px;
-    font-size: 24px;
-    color: #009292;
-    background-color: white;
-    -webkit-box-shadow: 5px 7px 15px 4px rgba(0, 0, 0, 0.44);
-    box-shadow: 5px 7px 15px 4px rgba(0, 0, 0, 0.44);
+  border-radius: 5px;
+  font-size: 24px;
+  color: #009292;
+  background-color: white;
+  -webkit-box-shadow: 5px 7px 15px 4px rgba(0, 0, 0, 0.44);
+  box-shadow: 5px 7px 15px 4px rgba(0, 0, 0, 0.44);
 }
 
 .banner-logo {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    bottom: calc(0% - 50px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  bottom: calc(0% - 50px);
 }
 
 .banner-logo img {
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
-    z-index: 1;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+  z-index: 1;
 }
 
 .vision-section {
-    margin-top: 90px;
+  margin-top: 90px;
 }
 
-.vision-desc {
-    display: block;
-    font-size: 19px;
-    text-align: center;
-    margin-bottom: 35px;
+.vision {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 120px;
+  margin-bottom: 50px;
+  position: relative;
 }
 
-.vision-items-img {
-    height: 292px;
-    width: 292px;
-    margin-bottom: 35px;
-}
-
-.vision-img-wrapper {
-    height: 320px;
-    width: 330px;
-    margin-bottom: 35px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
-    transition: all 0.3s linear;
-
-}
-
-.vision-img-wrapper:hover,
-.vision-img-wrapper:hover img {
-    transform: translateY(-10px);
-}
-
-.vision-img-wrapper img {
-    transition: all 0.3s linear;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 320px;
-    border-radius: 50%;
-}
-
-.vision-items-img-desc {
-    text-align: center;
-    font-size: 18px;
-    font-family: 'Raleway', sans-serif;
-}
 
 .vision-items {
-    margin-bottom: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+  /* overflow: hidden; */
+  position: relative;
 }
 
-.vision-btn {
-    padding: 10px;
-    font-size: 19px;
-    margin-bottom: 35px;
+.vision-items:hover .vision-img {
+  transform: translateY(-5px) scale(1.1);
 }
 
-.slider {
-    width: 40rem;
+.vision-arrows {
+  position: absolute;
+  width: 70px;
+  top: 50%;
+}
+
+.vision-arrows.arrow2 {
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.vision-arrows.arrow1 {
+  left: 108.5%;
+  transform: translateY(-50%);
+}
+
+.vision-arrows.arrow3 {
+  right: 108.5%;
+  transform: translateY(-50%);
+}
+
+.vision-items h4 {
+  background-color: #fa4996;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  margin-bottom: 0;
+  overflow: hidden;
+  border-radius: 10px 10px 0 0;
+}
+
+.vision-items .vision-img {
+  width: 300px;
+  padding: 70px;
+  transition: all 0.25s ease-in;
+}
+
+@media (max-width: 1200px) {
+  .vision-items h4 {
+    font-size: 16px;
+  }
+
+  .vision-items .vision-img {
+    padding: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  .vision {
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+  }
+
+  .vision-items:first-child {
+    display: none;
+  }
+
+  .vision-arrows.arrow3 {
+    top: -25%;
+    left: 50%;
+    transform: translate(-50%, 0) rotate(90deg);
+  }
 }
