--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -1,65 +1,70 @@
 .footer {
-    background-color: $secondary-color-2;
-    // @include backgroundPink;
-    color: #fff;
-    padding: 40px 0;
+  background-color: $secondary-color-2;
+  // @include backgroundPink;
+  color: #fff;
+  padding: 40px 0;
+  overflow: hidden;
+
+  &-title {
+    text-transform: uppercase;
+    position: relative;
+    margin-bottom: 50px;
+    font-weight: bold;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -20px;
+      width: 50px;
+      height: 4px;
+      border: 0;
+      border-radius: 10px;
+      background-color: #fff;
+    }
+  }
+
+  &-logo {
+    width: 50px;
+    height: 50px;
     overflow: hidden;
+    margin-bottom: 20px;
+  }
 
-    &-title {
-        text-transform: uppercase;
-        position: relative;
-        margin-bottom: 50px;
-        font-weight: bold;
+  ul {
+    li {
+      margin-bottom: 10px;
+      transition: all 0.3s linear;
 
-        &::before {
-            content: '';
-            position: absolute;
-            bottom: -20px;
-            width: 50px;
-            height: 4px;
-            border: 0;
-            border-radius: 10px;
-            background-color: #fff;
-        }
+      &:hover {
+        transform: translate(5px, -5px);
+        opacity: 0.9;
+      }
     }
+  }
 
-    ul {
-        li {
-            margin-bottom: 10px;
-            transition: all 0.3s linear;
+  &-socials {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
 
-            &:hover {
-                transform: translate(5px, -5px);
-                opacity: 0.9;
-            }
-        }
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-shrink: 0;
+      font-size: 24px;
+      width: 50px;
+      height: 50px;
+      border: 1px solid #fff;
+      border-radius: 50%;
+      transition: all 0.3s linear;
+
+      &:hover {
+        background-color: #fff;
+        color: $secondary-color-2;
+      }
     }
-
-    &-socials {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 20px;
-        flex-wrap: wrap;
-
-        a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            
-            flex-shrink: 0;
-            font-size: 24px;
-            width: 50px;
-            height: 50px;
-            border: 1px solid #fff;
-            border-radius: 50%;
-            transition: all 0.3s linear;
-
-            &:hover {
-                background-color: #fff;
-                color: $secondary-color-2;
-
-            }
-        }
-    }
+  }
 }
